    leaves atoms with negative occupancy [Takaaki Fukami].
  
  o BUG-FIX: Shift-spacing through waters, deleting active water now
    goes to previous atom [Ingo Korndoerfer].

  o BUG-FIX: No torsion restraints added when the esd of the torsion
    is 0 (Phenix compatibility) [Joel Bard].

  o BUG-FIX: Rotamers and Edit Chi now works for MSEs [Clemens Vonrhein].

-----

  Release 0.6

  o FEATURE: User-defined clicks [Joel Bard].

  o FEATURE: SHELXL interfaces allows the user to modify the input before
    running the SHELXL executable [Tobias Beck].

  o FEATURE: Now compatible with Zalman M220W.

  o FEATURE: Post-manipulation function hook added [JED].

  o FEATURE: "Sphere" (residue selection) refinement.

  o FEATURE: function to (re-)calculate probe dots around a give point
    [Joel Bard].

  o FEATURE: monomer and residue selection dipoles.

  o FEATURE: Interactive map sharpening [Randy Read, Alex Brunger].

  o FEATURE: LINK bonds are are now represented.

  o FEATURE: "Backrub rotamers" at low (2.7 or worse) resolution.

  o FEATURE: Baton build parameters (e.g. "backwards") now have a GUI 
    [Phil Evans].

  o FEATURE: Move waters to surround protein [Garib Murshudov]

  o FEATURE: rotate/translate zone by residue ranges

  o FEATURE: Rigid-body fit by residue ranges.

  o FEATURE: Multi-select on reading coordinates is enabled.

  o FEATURE: Immediate access to coordinates from CIF dictionaries
    that contain coordinates (no need for LIBCHECK in such cases).

  o FEATURE: Nudge-residue (bound to Ctrl-arrow keys).

  o FEATURE: A dialog has been added from map averaging [Bob Nolte].

  o FEATURE: Rename residue [Alexander Schiffer].

  o CHANGE: partial charges added to electrostatic surface calculation.

  o CHANGE: shift-click and ctrl-click in the file selectors now work
    for reading in several coordinates files [Roberto Steiner].

  o CHANGE: SEGIDs are more intelligently inherited [Steven Sheriff,
    Bob Nolte].
 