@@ -355,6 +355,7 @@ public:
 			int n_residue_atoms,
 			coot::protein_geometry *protein_geom, // modifiable, currently
 			short int residue_is_water_flag,
+			bool draw_env_distances_to_hydrogens_flag,
 			float min_dist,
 			float max_dist);
 
@@ -365,6 +366,7 @@ public:
 			int n_residue_atoms,
 			float min_dist,
 			float max_dist, 
+			bool draw_env_distances_to_hydrogens_flag,
 			short int do_symmetry);
 
    // This is the one for occupancy and B-factor representation
